[package]
name = "nanlo"
description = "Nanlo parser and interpretation runtime"
version = "0.1.0"
authors = ["lumiknit <aasr4r4@gmail.com>"]

readme = "https://github.com/lumiknit/nanlo#README.md"
homepage = "https://github.com/lumiknit/nanlo#README.md"
repository = "https://github.com/lumiknit/nanlo"

license = "MIT"

edition = "2021"

[workspace]

members = ["dokki", "seongnyang", "seongnyang.js"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dokki = { path = "./dokki" }
seongnyang = { path = "./seongnyang" }
clap = { version = "4.5.20", features = ["derive"] }
rustyline = "14.0.0"
