[package]
name = "dokki"
description = "Small and simple language interpreter"
version = "0.1.0"
authors = ["lumiknit <aasr4r4@gmail.com>"]

readme = "https://github.com/lumiknit/nanlo/dokki#README.md"
homepage = "https://github.com/lumiknit/nanlo/dokki#README.md"
repository = "https://github.com/lumiknit/nanlo"

license = "MIT"

edition = "2021"

[dependencies]
wasm-encoder = "0.219"

[lib]
crate-type = ["rlib", "cdylib"]
